# bearnote_cli

./: Cargo.toml
src/: main.rs  store.rs
