[package]
name = "bearnote"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version="2.33.0", features = [ "suggestions", "color" ]}
chrono = {version="0.4.6", features = ["serde"]}
serde = "1.0.91"
serde_derive = "1.0.91"
dirs = "2.0.0"
toml = "0.5.1"
colored = "1.8.0"
reqwest = "0.9.17"
